@@ -1,5 +1,8 @@
 2015-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* tools/tiff2pdf.c (t2p_readwrite_pdf_image): Fix Coverity 1024181
+	"Structurally dead code".
+
 	* tools/raw2tiff.c (main): Fix Coverity 1024887 "Unchecked return
 	value from library".
 	(guessSize): Fix Coverity 1024888 "Unchecked return value from
